plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.2.0'
    id 'checkstyle'
    id 'war'
}

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/milestone" }
    maven { url "https://repo.spring.io/snapshot" }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
    implementation 'org.springframework.boot:spring-boot-devtools:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.1.0'
    implementation 'org.springframework.security:spring-security-saml2-service-provider:5.7.1'
    implementation 'org.springframework.security:spring-security-ldap:6.1.0'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
    providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.8'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'commons-lang:commons-lang:2.6'
    implementation 'org.webjars:bootstrap:5.3.2'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.3'

    implementation 'com.ibatis:ibatis2-common:2.1.7.597'
    implementation 'org.apache.derby:derby:10.16.1.1'
    implementation 'org.apache.derby:derbytools:10.16.1.1'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
    implementation 'org.apache.velocity:velocity:1.7'
    implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.2'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation group: 'org.eclipse.jdt.core.compiler', name: 'ecj', version: '4.6.1'
}

group = 'org.openkilda'
description = 'OpenKilda-GUI'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.required = true
    }
}

bootJar {
    archiveFileName = "${archivesBaseName}.${archiveExtension.get()}"
}

checkstyle {
    toolVersion '8.18'
    configDirectory = file('src/checkstyle')
    configProperties = [
            'checkstyle.suppression.file': file('src/checkstyle/checkstyle-suppress-known-issues.xml'),
            'checkstyle.header.file'     : file('src/checkstyle/checkstyle-header.txt')
    ]

    showViolations = true
    ignoreFailures = false
    maxWarnings = 0

    configurations {
        checkstyle
    }

    dependencies {
        checkstyle 'com.puppycrawl.tools:checkstyle:8.18'
    }
}

/*TODO: not compatible with Gradle 7+, need another way to hide checkstyle info messages
[checkstyleMain, checkstyleTest].each { task ->
    task.logging.setLevel(LogLevel.LIFECYCLE)
}*/

jar {
  manifest {
    attributes "Main-Class": "org.openkilda.OpenKildaApplication"
  }
}

test {
    useJUnitPlatform()
}
